test/bad/bounded.ept
const n:int = 3

fun f(x:int{<n}) = (y:int)
let
  y = n - x;
tel

node main(x:int) = (y:int)
let
  y = f(x);
tel
